<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_data</name>
  <version>0.0.1</version>
  <description>ROSNEURO Data package</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
