<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_data</name>
  <version>1.0.1</version>
  <description>ROSNEURO Data package</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  
  <build_depend>rosneuro_msgs</build_depend>
  <exec_depend>rosneuro_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  

</package>
